Added script.js and placeholder

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     <p>Repudiandae laborum quisquam necessitatibus minima quam quas ducimus voluptas eligendi reiciendis facilis corporis, cupiditate quia autem similique facere numquam quibusdam molestias excepturi voluptatem ipsa error assumenda. Aliquam excepturi aliquid commodi!</p>
     <p>Assumenda molestias tempora omnis soluta, perferendis eveniet, voluptatibus officia illum a minus laborum cumque quod, expedita quae repudiandae corporis architecto similique veritatis neque quibusdam cum ea distinctio. Laudantium, iusto ab!</p>
   </main>
+  <script src="./script.js"></script>
 </body>
 </html>
