--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./style.css" />
   <title>Joe Dietrich</title>
 </head>
+<header>
+  <p class="logo">Joe Dietrich</p>
+</header>
 <body>
   <main>
     <h1>Joe Dietrich</h1>
