Added Project Cards

--- a/index.html
+++ b/index.html
@@ -7,14 +7,60 @@
   <link rel="stylesheet" href="./normalize.css" />
   <link rel="stylesheet" href="./style.css" />
   <title>Joe Dietrich</title>
+  <meta name="description" content="The Flatiron School Landing Page of Joe Dietrich">
 </head>
 <header>
   <p class="logo">Joe Dietrich</p>
 </header>
 <body>
   <main>
-    <h1>Joe Dietrich</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores rerum libero quae, recusandae non, hic, iusto consequuntur voluptatem tenetur minus suscipit accusantium perferendis fugit quam. Commodi repellendus nisi eum aliquam!</p>
+    <h1>Welcome!</h1>
+    <p>Hello! I'm Joe - a product manager and a life-long lover of learning. I'm passionate about solving 
+      problems, technology, and experimentation. Sometimes I even combine all three!</p>
+    <p>I've done a little programming in the past. Below are a few selected projects I've worked on.</p>
+    <h2>Projects</h2>
+    <div class="card-holder">
+      <div class="card">
+        <a href="https://joedietrich.dev/techDocs/public/">
+          <img class="card-image" 
+              src="./img/documentation.png" 
+              alt="Screenshot of Documentation Page" 
+              width="600"
+              height="400"/>
+        </a>
+        <div class="card-title">Technical Documentation</div>
+      </div>
+      <div class="card">
+        <a href="https://joedietrich.dev/data-visualizations/">
+          <img class="card-image" 
+              src="./img/documentation.png" 
+              alt="Screenshot of Documentation Page" 
+              width="600"
+              height="400"/>
+        </a>
+        <div class="card-title">Data Visualizations</div>
+      </div>
+      <div class="card">
+        <a href="https://joedietrich.dev/reactprojects/calculator/" >
+          <img class="card-image" 
+              src="./img/documentation.png" 
+              alt="Screenshot of Documentation Page" 
+              width="600"
+              height="400"/>
+        </a>
+        <div class="card-title">React Calculator</div>
+      </div>
+      <div class="card">
+        <a href="https://joedietrich.dev/reactprojects/markdownparser/">
+          <img class="card-image" 
+              src="./img/documentation.png" 
+              alt="Screenshot of Documentation Page" 
+              width="600"
+              height="400"/>
+        </a>
+        <div class="card-title">Markdown Parser</div>
+      </div>
+    </div>
     <pre>
       function solutionRefactor(roman){
         const values = {
