Filled in remaining images and added link css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </header>
 <body>
   <main>
+    <!--TO DO:
+        1. Break Projects into separate page
+        2. Create separate page for Array functions article
+        3. Write copy for links to Projects and Arrays
+        4. Refactor CSS to allow for a Dark Theme
+        5. Create button that switches themes and persists selection in localStorage-->
     <h1>Welcome!</h1>
     <p>Hello! I'm Joe - a product manager and a life-long lover of learning. I'm passionate about solving 
       problems, technology, and experimentation. Sometimes I even combine all three!</p>
@@ -28,37 +34,45 @@
               width="600"
               height="400"/>
         </a>
-        <div class="card-title">Technical Documentation</div>
+        <div class="card-title">
+          <a href="https://joedietrich.dev/techDocs/public/">Technical Documentation</a>
+        </div>
       </div>
       <div class="card">
         <a href="https://joedietrich.dev/data-visualizations/">
           <img class="card-image" 
-              src="./img/documentation.png" 
-              alt="Screenshot of Documentation Page" 
+              src="./img/dataViz.png" 
+              alt="Screenshot of a Choropleth Map" 
               width="600"
               height="400"/>
         </a>
-        <div class="card-title">Data Visualizations</div>
+        <div class="card-title">
+          <a href="https://joedietrich.dev/data-visualizations/">Data Visualizations</a>
+        </div>
       </div>
       <div class="card">
         <a href="https://joedietrich.dev/reactprojects/calculator/" >
           <img class="card-image" 
-              src="./img/documentation.png" 
-              alt="Screenshot of Documentation Page" 
+              src="./img/calculator.png" 
+              alt="Screenshot of a Calculator App" 
               width="600"
               height="400"/>
         </a>
-        <div class="card-title">React Calculator</div>
+        <div class="card-title">
+          <a href="https://joedietrich.dev/reactprojects/calculator/" >React Calculator</a>
+        </div>
       </div>
       <div class="card">
         <a href="https://joedietrich.dev/reactprojects/markdownparser/">
           <img class="card-image" 
-              src="./img/documentation.png" 
-              alt="Screenshot of Documentation Page" 
+              src="./img/markdown.png" 
+              alt="Screenshot of a Markdown Parser" 
               width="600"
               height="400"/>
         </a>
-        <div class="card-title">Markdown Parser</div>
+        <div class="card-title">
+          <a href="https://joedietrich.dev/reactprojects/markdownparser/">Markdown Parser</a>
+        </div>
       </div>
     </div>
     <pre>
