Added skipped files from 0e28cb5

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         2. Create separate page for Array functions article
         3. Write copy for links to Projects and Arrays
         4. Refactor CSS to allow for a Dark Theme
-        5. Create button that switches themes and persists selection in localStorage-->
+        5. Create button that switches themes and persists selection in localStorage
+        6. Create favicon-->
     <h1>Welcome!</h1>
     <p>Hello! I'm Joe - a product manager and a life-long lover of learning. I'm passionate about solving 
       problems, technology, and experimentation. Sometimes I even combine all three!</p>
