Updated to add themes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <header>
   <p class="logo">Joe Dietrich</p>
+  <button id="theme-switch">Change Theme</button>
 </header>
 <body>
   <main>
@@ -76,6 +77,14 @@
         </div>
       </div>
     </div>
+    <h2>Contact Me</h2>
+    <p>You can reach me at the links below:</p>
+    <ul class="contact-links">
+      <li class="contact-link"><a href="https://github.com/joedietrich-dev"><img src="./img/GitHub.svg" alt="Link to GitHub"  width="50" height="50"/></a></li>
+      <li class="contact-link"><a href="https://www.linkedin.com/in/joe-dietrich-17b74062/"><img src="./img/linkedin.svg" alt="Link to LinkedIn" width="50" height="50"></a></li>
+      <li class="contact-link"><a href="https://joedietrich.dev"><img src="./img/link.svg" alt="Link to joedietrich.dev"  width="50" height="50"></a></li>
+    </ul>
+
     <pre>
       function solutionRefactor(roman){
         const values = {
